--- a/views/others/allmatches.handlebars
+++ b/views/others/allmatches.handlebars
@@ -3,15 +3,22 @@
 <script src="/public/js/addmatch.js"></script>
 <h1>Report a Match</h1>
 <form class="reportMatch">
-    <label for="winner">Winner</label>
-    <input type="text" name ="winner" id="winner">
-    <label for="winnerPlayed">Winner's Character</label>
-    <input type="text" name ="winnerPlayed" id="winnerPlayed"> <br>
-
-    <label for="loser">Loser</label>
-    <input type="text" name ="loser" id="loser">
-    <label for="loserPlayed">Loser's Character</label>
-    <input type="text" name ="loserPlayed" id="loserPlayed"> <br>
+    <fieldset class="small">
+        <label for="winner">Winner</label>
+        <input type="text" name ="winner" id="winner">
+    </fieldset>
+    <fieldset class="large">
+        <label for="winnerPlayed">Winner's Character</label>
+        <input type="text" name ="winnerPlayed" id="winnerPlayed">
+    </fieldset><br>
+    <fieldset class="small">
+        <label for="loser">Loser</label>
+        <input type="text" name ="loser" id="loser">
+    </fieldset>
+    <fieldset class="large">
+        <label for="loserPlayed">Loser's Character</label>
+        <input type="text" name ="loserPlayed" id="loserPlayed">
+    </fieldset><br>
     <button class="submitMatch">Submit</button>
 </form>
 <form class="searchForm">
