--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
-	<h1>SSBU Tournament Profiles</h1>
+	<h1 id="title">SSBU Tournament Profiles</h1>
 	<main>
         {{#unless landing}}
         <a class="header" href="/">Main page</a>
