--- a/views/others/landing.handlebars
+++ b/views/others/landing.handlebars
@@ -1,15 +1,3 @@
-<h1>This is the landing page</h1>
-
-<p>Here is a link to the users profile page</p>
-<a href="/users">User Profiles</a>
-
-<p>Here is a link to the characters profile page</p>
-<a href="/characters">Character Profiles</a>
-
-<p>Here is a link to a list of all tournaments</p>
-<a href="/tournaments">Tournament Profiles</a>
-<p>Here is a link to the list of all matches</p>
-<a href="/matches">All Matches</a>
-
-<p>Here is a link to login</p>
-<a href="/login">Login</a>
+<div class="home">
+    <img src="https://miketendo64.com/wp-content/uploads/2018/06/img_20180612_18512657791753086673157.jpg">
+</div>
