--- a/views/others/allmatches.handlebars
+++ b/views/others/allmatches.handlebars
@@ -1,26 +1,28 @@
 <script src="/public/js/tablesorts.js"></script>
 <script src="/public/js/tablesearch.js"></script>
 <script src="/public/js/addmatch.js"></script>
-<h1>Report a Match</h1>
-<form class="reportMatch">
-    <fieldset class="small">
-        <label for="winner">Winner</label>
-        <input type="text" name ="winner" id="winner">
-    </fieldset>
-    <fieldset class="large">
-        <label for="winnerPlayed">Winner's Character</label>
-        <input type="text" name ="winnerPlayed" id="winnerPlayed">
-    </fieldset><br>
-    <fieldset class="small">
-        <label for="loser">Loser</label>
-        <input type="text" name ="loser" id="loser">
-    </fieldset>
-    <fieldset class="large">
-        <label for="loserPlayed">Loser's Character</label>
-        <input type="text" name ="loserPlayed" id="loserPlayed">
-    </fieldset><br>
-    <button class="submitMatch">Submit</button>
-</form>
+{{#if username}}
+    <h1>Report a Match</h1>
+    <form class="reportMatch">
+        <fieldset class="small">
+            <label for="winner">Winner</label>
+            <input type="text" name ="winner" id="winner">
+        </fieldset>
+        <fieldset class="large">
+            <label for="winnerPlayed">Winner's Character</label>
+            <input type="text" name ="winnerPlayed" id="winnerPlayed">
+        </fieldset><br>
+        <fieldset class="small">
+            <label for="loser">Loser</label>
+            <input type="text" name ="loser" id="loser">
+        </fieldset>
+        <fieldset class="large">
+            <label for="loserPlayed">Loser's Character</label>
+            <input type="text" name ="loserPlayed" id="loserPlayed">
+        </fieldset><br>
+        <button class="submitMatch">Submit</button>
+    </form>
+{{/if}}
 <form class="searchForm">
     <label for="search_term">Search Term</label>
     <input type="text" name ="search_term" id="search_term">
