--- a/views/others/login.handlebars
+++ b/views/others/login.handlebars
@@ -1,5 +1,5 @@
 {{#if error}}
-    <p>Username or Password Incorrect</p>
+    <p class="error">Username or Password Incorrect</p>
 {{/if}}
 <form action="/login" method="POST" id="login-form">
     <label for="username">Username:</label><br>
