--- a/views/others/allmatches.handlebars
+++ b/views/others/allmatches.handlebars
@@ -53,7 +53,7 @@
             <p>N/A</p>
             {{/if}}
         </td>
-        <td class="link excludeFromSearch"><a href="../matches/{{this._id}}">link</a></td>
+        <td class="link excludeFromSearch"><a href="../matches/{{this._id}}">Go to Match</a></td>
         {{!Add a tournamentplayed field}}
     </tr>    
     {{/each}}
