--- a/views/others/landing.handlebars
+++ b/views/others/landing.handlebars
@@ -1,4 +1,4 @@
 <div class="home">
-    <img src="https://miketendo64.com/wp-content/uploads/2018/06/img_20180612_18512657791753086673157.jpg">
+    <img src="https://miketendo64.com/wp-content/uploads/2018/06/img_20180612_18512657791753086673157.jpg" alt="COOL SMASH IMAGE">
     <p> Welcome to SSBU Tournament Profiles, here you can record matches, look at statistics, and participate in tournaments.
 </div>
