--- a/views/others/tournament.handlebars
+++ b/views/others/tournament.handlebars
@@ -49,7 +49,7 @@
                 <a href="../users/{{this.loser}}">{{this.loser}}</a>
                 (<a href="../characters/{{this.loserPlayed}}">{{this.loserPlayedDisplay}}</a>)
             </td>
-            <td class="link excludeFromSearch"><a href="../matches/{{this._id}}">link</a></td>
+            <td class="link excludeFromSearch"><a href="../matches/{{this._id}}">Go To Match</a></td>
         </tr>    
         {{/each}}
     </table>
