--- a/views/others/signup.handlebars
+++ b/views/others/signup.handlebars
@@ -7,5 +7,4 @@
     <label for="password">Password:</label><br>
     <input type="password" id ="password" name="password"/><br>
     <button type="submit">Sign In</button>
-</form><br>
-<a href="/login/signup">Make an Account</a>
+</form>
