--- a/views/others/character.handlebars
+++ b/views/others/character.handlebars
@@ -7,8 +7,8 @@
 
 <!-- Tab content -->
 <div id="stat" class="tabcontent">
-    <h3>Character Statistics</h3>
-    <table>
+    <h2>Character Statistics</h2>
+    <table class="winloss">
         <tr>
             <th>Wins</th>
             <th>Losses</th>
@@ -21,7 +21,7 @@
 </div>
 
 <div id="match" class="tabcontent" hidden>
-    <h3>Recent Matches</h3>
+    <h2>Recent Matches</h2>
     <table id="matchTable">
         <tr>
             <th>Winner</th>
