--- a/views/others/signup.handlebars
+++ b/views/others/signup.handlebars
@@ -1,7 +1,7 @@
 {{#if error}}
-    <p class="error">Username or Password Incorrect</p>
+    <p class="error">{{error}}</p>
 {{/if}}
-<form action="/login" method="POST" id="login-form">
+<form action="/login/signup" method="POST" id="login-form">
     <label for="username">Username:</label><br>
     <input type="text" id ="username" name="username"/><br>
     <label for="password">Password:</label><br>
