--- a/views/others/tournament.handlebars
+++ b/views/others/tournament.handlebars
@@ -37,7 +37,7 @@
         <tr class="header">
             <th class="sortButton">Winner</th>
             <th class="sortButton">Loser</th>
-            <th>comments</th>
+            <th>Go To Match</th>
         </tr>
         {{#each matches}}
         <tr class="match">
