removed match sorting

--- a/views/others/allmatches.handlebars
+++ b/views/others/allmatches.handlebars
@@ -1,4 +1,3 @@
-<script src="/public/js/tablesorts.js"></script>
 <script src="/public/js/tablesearch.js"></script>
 <script src="/public/js/addmatch.js"></script>
 {{#if username}}
@@ -31,9 +30,9 @@
 <button class="clearResults" hidden>Clear Results</button>
 <table id = "matchTable">
     <tr class="header">
-        <th class="sortButton">Winner</th>
-        <th class="sortButton">Loser</th>
-        <th class="sortButton">Tournament</th>
+        <th>Winner</th>
+        <th>Loser</th>
+        <th>Tournament</th>
         <th>Match Link</th>
     </tr>
     {{#each matches}}
