--- a/views/others/tournament.handlebars
+++ b/views/others/tournament.handlebars
@@ -35,8 +35,8 @@
     <h2>Tournament Matches</h2>
     <table id = "matchTable">
         <tr class="header">
-            <th class="sortButton">Winner</th>
-            <th class="sortButton">Loser</th>
+            <th>Winner</th>
+            <th>Loser</th>
             <th>Go To Match</th>
         </tr>
         {{#each matches}}
